Thu Nov 14 19:49 2013 CDT
    * www/assets/js/callbacks.js: Fix AFK users on join and profile
      updates.

Wed Nov 13 22:35 2013 CDT
    * www/assets/js/util.js, www/assets/js/ui.js,
      www/assets/js/callbacks.js, www/channel.html:
      Add an in-place MOTD editor

Sun Nov 10 22:24 2013 CDT
    * www/assets/js/util.js: Add queueMessage function for displaying
      warnings/errors
    * lib/get-info.js: Add warning for videos blocked in certain
      countries (ytv2)
    * lib/user.js: If channel search turns up no results, youtube search
      instead

Fri Nov 08 20:44 2013 CDT
    * lib/channel.js, lib/chatcommand.js: Implement basic shadow mute
      command
Thu Nov 07 17:18 2013 CDT
    * lib/channel.js, lib/get-info.js, lib/media.js, lib/playlist.js,
      www/assets/js/player.js, www/assets/js/util.js:
      Add ability to embed Google Docs videos with synchronization

Wed Nov 06 17:42 2013 CDT
    * lib/server.js: Fix getChannel to properly handle case insensitive
      channel names

Tue Nov 05 22:43 2013 CDT
    * lib/channel.js: Set user.channel = null in userLeave to prevent
      double execution of userLeave.

Tue Nov 05 22:38 2013 CDT
    * lib/database.js: Add a check for registrations-in-progress to prevent
      duplicate queries by an impatient user
    * www/assets/js/account.js: Disable the registration button while the
      registration is being processed

Mon Nov 04 16:15 2013 CDT
    * lib/xss.js, tests/xss.js: Merge work-in-progress XSS filter
      from xss branch
    * lib/torblocker.js: Allow blocking of socket connections from
      Tor IPs

Thu Oct 31 18:10 2013 CDT
    * package.json: Require node-validator < 2.0.0 as a temporary
      measure while in-house XSS filtering is developed.

Wed Oct 30 19:28 2013 CDT
    * www/assets/js/util.js: Fix mod permission check breaking chat box
      in chat only mode

Mon Oct 20 21:48 2013 CDT
    * www/channel.html: Fix padding for channel.html on small screens

Thu Oct 24 17:29 2013 CDT